--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "main": "expo-router/entry",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -44,5 +45,10 @@
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
+
+  "resolutions": {
+    "styled-components": "^5"
+  },
+
   "private": true
 }
