--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "main": "expo-router/entry",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
     "expo-splash-screen": "~0.26.4",
@@ -27,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -45,10 +48,8 @@
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
-
   "resolutions": {
     "styled-components": "^5"
   },
-
   "private": true
 }
