--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 EXPO_PUBLIC_CATACLIMA_GITHUB=
 EXPO_PUBLIC_CATACLIMA_PREVIEW=
+EXPO_PUBLIC_EMAIL=
+EXPO_PUBLIC_GITHUB=
+EXPO_PUBLIC_LINKEDIN=
+EXPO_PUBLIC_NUMBER=
