Feat: added app rest project

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 EXPO_PUBLIC_CATACLIMA_GITHUB=
 EXPO_PUBLIC_CATACLIMA_PREVIEW=
+
+EXPO_PUBLIC_APPREST_GITHUB=
+EXPO_PUBLIC_APPREST_PREVIEW=
+
 EXPO_PUBLIC_EMAIL=
 EXPO_PUBLIC_GITHUB=
 EXPO_PUBLIC_LINKEDIN=
