--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ EXPO_PUBLIC_CATACLIMA_PREVIEW=
 
 EXPO_PUBLIC_APPREST_GITHUB=
 EXPO_PUBLIC_APPREST_PREVIEW=
+EXPO_PUBLIC_APPREST_API=
 
 EXPO_PUBLIC_EMAIL=
 EXPO_PUBLIC_GITHUB=
